# Music-Playlist---Django

./: README.md  pyproject.toml
playlist/: .env  db.sqlite3  pyproject.toml
playlist/core/: apps.py  middleware.py  urls.py  views.py
playlist/core/templates/: index.html
playlist/playlist/: asgi.py  settings.py  urls.py  wsgi.py
