[project]
name = "playlist"
version = "0.1.0"
description = ""
authors = [
    {name = "Rene Salvacion", email = "104616426+renesalvacion@users.noreply.github.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
